--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -45,45 +45,33 @@
             app:layout_constraintTop_toBottomOf="@+id/main_trip_picture"
             android:layout_marginTop="16dp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/trip_location_layout"
+        <TextView
+            android:id="@+id/trip_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:focusable="false"
+            android:textAppearance="?attr/textAppearanceBodyMedium"
+            android:textColor="?android:attr/textColorSecondary"
+            android:drawablePadding="2dp"
             app:layout_constraintTop_toBottomOf="@+id/trip_name"
             app:layout_constraintStart_toStartOf="parent"
             app:startIconContentDescription="@string/location_icon_description"
-            app:startIconDrawable="@drawable/ic_baseline_location_on_24">
+            app:drawableStartCompat="@drawable/ic_baseline_location_on_24">
+        </TextView>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/trip_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary"
-                android:inputType="none"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/trip_dates_layout"
+        <TextView
+            android:id="@+id/trip_start_end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:focusable="false"
-            app:layout_constraintStart_toEndOf="@+id/trip_location_layout"
-            app:layout_constraintTop_toTopOf="@+id/trip_location_layout"
+            android:textAppearance="?attr/textAppearanceBodyMedium"
+            android:textColor="?android:attr/textColorSecondary"
+            android:drawablePadding="2dp"
+            app:layout_constraintStart_toEndOf="@+id/trip_location"
+            app:layout_constraintTop_toTopOf="@+id/trip_location"
             app:startIconContentDescription="@string/calendar_icon_description"
-            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/trip_start_end_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary"
-                android:inputType="none"/>
-        </com.google.android.material.textfield.TextInputLayout>
+            app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24">
+        </TextView>
 
         <TextView
             android:id="@+id/trip_description"
@@ -92,7 +80,7 @@
             android:textAppearance="?attr/textAppearanceBodyMedium"
             android:textColor="?android:attr/textColorSecondary"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/trip_location_layout"
+            app:layout_constraintTop_toBottomOf="@+id/trip_location"
             app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
