--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -35,15 +35,6 @@
             app:layout_constraintTop_toBottomOf="@+id/main_trip_picture"
             android:layout_marginTop="16dp"/>
 
-        <CheckBox
-            android:id="@+id/favorite_trip"
-            android:layout_width="24sp"
-            android:layout_height="24sp"
-            android:button="@drawable/sl_baseline_favorite_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_trip_picture"
-            android:layout_marginTop="16dp" />
-
         <TextView
             android:id="@+id/trip_location"
             android:layout_width="wrap_content"
@@ -81,6 +72,15 @@
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/trip_location"
             app:layout_constraintStart_toStartOf="parent"/>
+
+        <CheckBox
+            android:id="@+id/favorite_trip"
+            android:layout_width="24sp"
+            android:layout_height="24sp"
+            android:button="@drawable/sl_baseline_favorite_24"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/trip_description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
