Added filtering by favorite trips

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -24,6 +24,13 @@
             app:destination="@id/tripContentFragment"
             app:enterAnim="@android:anim/slide_in_left"
             app:exitAnim="@android:anim/slide_out_right" />
+        <argument
+            android:name="isFilteringByFavoriteActive"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <action
+            android:id="@+id/action_tripsFragment_self"
+            app:destination="@id/tripsFragment" />
     </fragment>
     <fragment
         android:id="@+id/newTripFragment"
