--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -30,7 +30,9 @@
             android:defaultValue="false" />
         <action
             android:id="@+id/action_tripsFragment_self"
-            app:destination="@id/tripsFragment" />
+            app:destination="@id/tripsFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/newTripFragment"
