Converted login layout to constraintlayout

--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -8,6 +8,7 @@
     android:layout_margin="8dp"
     android:clickable="true"
     android:focusable="true"
+    android:checkable="true"
     style="?attr/materialCardViewFilledStyle">
 
     <androidx.constraintlayout.widget.ConstraintLayout
